k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nextjs-demo
  name: nextjs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nextjs-demo
    spec:
      containers:
      - image: thawab/nextjs-example
        name: nextjs-example
        resources: {}
status: {}
