k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nextjs-demo
  name: nextjs-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nextjs-demo
  type: ClusterIP
status:
  loadBalancer: {}
